# invariance

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: config.rs  dsl.rs  error.rs  lib.rs  parser.rs  schema.rs  validate.rs
