[package]
name = "invariance"
version = "0.1.1"
edition = "2024"
description = "A Rust crate providing type-safe, validated configuration to prevent runtime crashes from invalid config data."
license = "Apache-2.0"
repository = "https://github.com/ParkBlake/invariance"
homepage = "https://github.com/ParkBlake/invariance"
documentation = "https://docs.rs/invariance"
keywords = ["configuration", "validation", "rust", "type-safe", "toml"]
categories = ["config", "development-tools"]

[dependencies]

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"
toml = "0.8"
